--- a/index.html
+++ b/index.html
@@ -396,6 +396,7 @@
 	</div>
 	
 	<!--log-->
+	
 	<script>
 	
     google.charts.load('current', {'packages':['corechart']});
@@ -463,7 +464,7 @@
 	
 	</script>
 	
-	<div id="logtable"></div>
+	<div id="logtable" style="margin: 20px;"></div>
 	
 	<!--About Section-->
 	<div id="about" style="margin: 50px;">
