--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
 				<label for="textarea1">內容</label>
 			</div>
 			<div class="right-align">
-				<button class="btn waves-effect waves-light blue" type="button" name="action" onclick="prepareSubmit()">送出
+				<button class="btn waves-effect waves-light blue" type="button" name="action" onclick="formresponse()">送出
 				<i class="material-icons right">send</i>
 				</button>
 			</div>
