--- a/index.html
+++ b/index.html
@@ -619,26 +619,24 @@
 		<p style="font-size: 20px;">意見回饋</p>
 	</div>
 	<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location.reload();}"></iframe>
-	<div class="container" id="comment">
-		<hr color="white">
-		<div id="getNUMBER" style="display: none;"></div>
-		<form name="comments">
-			<div class="input-field">
-				<i class="material-icons prefix">account_circle</i>
-				<input id="icon_prefix" type="text" class="validate" data-length="20" name="name">
-				<label for="icon_prefix">暱稱</label>
-			</div>
-			<div class="input-field">
-				<textarea id="textarea1" class="materialize-textarea" name="content"></textarea>
-				<label for="textarea1">內容</label>
-			</div>
-			<div class="right-align">
-				<button class="btn waves-effect waves-light blue" type="button" name="action" onclick="formresponse()">送出
-				<i class="material-icons right">send</i>
-				</button>
-			</div>
-		</form>
-	</div>
+	
+	<form name="comments" action="javascript:formresponse();">
+		<div class="input-field">
+			<i class="material-icons prefix">account_circle</i>
+			<input id="icon_prefix" type="text" class="validate" data-length="20" name="name">
+			<label for="icon_prefix">暱稱</label>
+		</div>
+		<div class="input-field">
+			<textarea id="textarea1" class="materialize-textarea" name="content"></textarea>
+			<label for="textarea1">內容</label>
+		</div>
+		<div class="right-align">
+			<button class="btn waves-effect waves-light blue" type="button" name="action" onclick="formresponse()">送出
+			<i class="material-icons right">send</i>
+			</button>
+		</div>
+	</form>
+	
 	
 	<hr style="border-color: rgba(255, 255, 255, 0);">
 	<div class="container" id="showCOMMENT" style="background-color: rgba(255, 255, 255, 1);padding: 30px;">
