--- a/index.html
+++ b/index.html
@@ -614,8 +614,16 @@
 	</script>
 
 	<!--意見回饋-->
-	<div class="container" style="margin-left: 20px;">
-		<p style="font-size: 20px;">意見回饋</p>
+	<div id="log" style="margin: 50px; margin-top: 200px;">
+		<div class="parallax-container valign-wrapper" style="margin: 20px; border-radius: 10px;">
+			<div class="section no-pad-bot" >
+				<div class="container">
+					<div class="row center" >
+						<h5 id="titleblock"class="header col s12 light" style="font-size: 50px; color: #000; font-weight: 200; ">意見回饋</h5>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location.reload();}"></iframe>
 	
