--- a/index.html
+++ b/index.html
@@ -609,40 +609,33 @@
 			else
 			{
 				var submit = "https://docs.google.com/forms/d/e/1FAIpQLScNG5mLZMYcUub8LjZBCbkalGH6ACZ6YZBtDtg7rSZ476he7Q/formResponse?usp=pp_url&entry.246789019=" + name + "&entry.176476684=" + content;
-	    		}
+	    			alert("已提交回應!");
+			}
 		}
 	</script>
 
 	<!--意見回饋-->
-	<div id="log" style="margin: 50px; margin-top: 200px;">
-		<div class="parallax-container valign-wrapper" style="margin: 20px; border-radius: 10px;">
-			<div class="section no-pad-bot" >
-				<div class="container">
-					<div class="row center" >
-						<h5 id="titleblock"class="header col s12 light" style="font-size: 50px; color: #000; font-weight: 200; ">意見回饋</h5>
-					</div>
-				</div>
+	<div style="margin: 50px; margin-top: 200px;">
+		<p>意見回饋</p>
+		<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location.reload();}"></iframe>
+		
+		<form name="comments" action="javascript:formresponse();">
+			<div class="input-field">
+				<i class="material-icons prefix">account_circle</i>
+				<input id="icon_prefix" type="text" class="validate" data-length="20" name="name">
+				<label for="icon_prefix">暱稱</label>
 			</div>
-		</div>
+			<div class="input-field">
+				<textarea id="textarea1" class="materialize-textarea" name="content"></textarea>
+				<label for="textarea1">內容</label>
+			</div>
+			<div class="right-align">
+				<button class="btn waves-effect waves-light blue" type="button" name="action" onclick="formresponse()">送出
+				<i class="material-icons right">send</i>
+				</button>
+			</div>
+		</form>
 	</div>
-	<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location.reload();}"></iframe>
-	
-	<form name="comments" action="javascript:formresponse();">
-		<div class="input-field">
-			<i class="material-icons prefix">account_circle</i>
-			<input id="icon_prefix" type="text" class="validate" data-length="20" name="name">
-			<label for="icon_prefix">暱稱</label>
-		</div>
-		<div class="input-field">
-			<textarea id="textarea1" class="materialize-textarea" name="content"></textarea>
-			<label for="textarea1">內容</label>
-		</div>
-		<div class="right-align">
-			<button class="btn waves-effect waves-light blue" type="button" name="action" onclick="formresponse()">送出
-			<i class="material-icons right">send</i>
-			</button>
-		</div>
-	</form>
 	
 	
 	<hr style="border-color: rgba(255, 255, 255, 0);">
