--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
 	</script>
 
 	<!--意見回饋-->
-	<div style="margin: 50px; margin-top: 200px;">
+	<div style="margin: 100px; margin-top: 200px;">
 		<p>意見回饋</p>
 		<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location.reload();}"></iframe>
 		
@@ -630,7 +630,7 @@
 				<label for="textarea1">內容</label>
 			</div>
 			<div class="right-align">
-				<button class="btn waves-effect waves-light blue" type="button" name="action" onclick="formresponse()">送出
+				<button class="btn waves-effect waves-light" type="button" name="action" onclick="formresponse()">送出
 				<i class="material-icons right">send</i>
 				</button>
 			</div>
@@ -650,11 +650,6 @@
 					<p class="grey-text text-lighten-4">目前正在努力完成這個網站與更多 Project。</p>
 					<p class="grey-text text-lighten-4">請用這個信箱聯絡我: tcomplex1661@gmail.com</p>
 				</div>
-			</div>
-		</div>
-		<div class="footer-copyright">
-			<div class="container">
-				Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
 			</div>
 		</div>
 	</footer>
