--- a/index.html
+++ b/index.html
@@ -609,7 +609,8 @@
 			else
 			{
 				var submit = "https://docs.google.com/forms/d/e/1FAIpQLScNG5mLZMYcUub8LjZBCbkalGH6ACZ6YZBtDtg7rSZ476he7Q/formResponse?usp=pp_url&entry.246789019=" + name + "&entry.176476684=" + content;
-	    			alert("已提交回應!");
+	    			var open = window.open(submit);
+				alert("已提交回應!");
 				document.forms["comments"]["name"].value = "";
 				document.forms["comments"]["content"].value "";
 			}
