--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
 
 	<!--意見回饋-->
 	<div style="margin: 150px; margin-top: 200px;">
-		<p>意見回饋</p>
+		<p style="font-size: 25px; margin: 20px;">意見回饋</p>
 		<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location.reload();}"></iframe>
 		
 		<form name="comments" action="javascript:formresponse();">
