--- a/index.html
+++ b/index.html
@@ -463,9 +463,9 @@
 	}
 	
 	</script>
-	
-	<div id="logtable" style="margin: 20px;"></div>
-	
+	<div style="margin: 100px;">
+		<div id="logtable"></div>
+	</div>
 	<!--About Section-->
 	<div id="about" style="margin: 50px;">
 		<div class="parallax-container valign-wrapper" style="margin: 20px; border-radius: 10px;">
