--- a/field.html
+++ b/field.html
@@ -9,6 +9,11 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 		
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<head>
+		<!-- 利用Google Visualization讀取Google Sheet https://www.labnol.org/code/google-sheet-d3js-visualization-200608 -->
+		<script src="https://www.gstatic.com/charts/loader.js"></script>
+	  	google.charts.load('current', {'packages':['corechart']});
+		google.charts.setOnLoadCallback(init);
 	</head>
 	
 	<style>
@@ -133,6 +138,48 @@
 		}
 	}
 	</style>
+	<script>
+		function init() {
+			var url =
+			'https://docs.google.com/spreadsheets/d/1Gnn0PCY6ghFofEiZ_6AlR0O1Yb_G--dRyFD6ILlZhcA/gviz/tq?sheet=field';
+			var query = new google.visualization.Query(url);
+			query.setQuery('select *');
+			query.send(processSheetsData);
+		}	
+		
+		cardtitle = ['','']
+		carddes = ['','']
+			
+		function processSheetsData(response) {
+			var data = response.getDataTable();
+			var columns = data.getNumberOfColumns();
+			var rows = data.getNumberOfRows();
+		
+			for (var r=0 ; r<rows ; r++) {
+				cardtitle[r] = data.getFormattedValue(r,0);
+				carddes[r] = data.getFormattedValue(r,1);
+			}
+		   
+		    	generateCard();
+		}
+		  
+		  function generateCard(){
+		    var str = '';
+		    for(let i = 0; i < imgsrc.length ; i++){
+		      s += `<div class="banner">
+		              <p id="title">${cardtitle[i]}</p>
+		          </div>
+		            <div class="des">
+		              <p id="textbox">${carddes[i]}.</p>
+		          </div>
+		          </div>
+		        </div>`;
+		    }
+		    document.getElementById("generative-card").innerHTML = str;
+		  }
+	
+	</script>	
+  
 	<body>
 	
 		<!--Back to home page-->
@@ -146,34 +193,9 @@
 		<div class="center">
 			<p id="bigtitle">FIELD</p>
 		</div>
-		
-		<div class="banner">
-			<p id="title">Math</p>
-			<div class="des">
-				<p id="textbox">數學目前修習微積分，額外也有在自修線性代數。</p>
-			</div>
-		</div>
-		<div class="banner">
-			<p id="title">Coding</p>
-			<div class="des">
-				<p id="textbox">目前主要使用的程式語言是Python3，另外之前也有學過C++。</p>
-			</div>
-		</div>
-		<div class="banner">
-			<p id="title">Website Constructing</p>
-			<div class="des">
-				<p id="textbox">之前有自學過HTML與CSS，並有嘗試做一些小小的動畫或元素。</p>
-			</div>
-		</div>
-		
-		<div class="banner">
-			<p id="title">Building</p>
-			<div class="des">
-				<p id="textbox">有研究過各式風格的建築，如日式、歐式，都有略淺的知識。</p>
-			</div>
-		</div>
-		
 
+
+		<div id="generative-card"></div>
 		
 	</body>
 	
