--- a/field.html
+++ b/field.html
@@ -12,8 +12,10 @@
 		<head>
 		<!-- 利用Google Visualization讀取Google Sheet https://www.labnol.org/code/google-sheet-d3js-visualization-200608 -->
 		<script src="https://www.gstatic.com/charts/loader.js"></script>
-	  	google.charts.load('current', {'packages':['corechart']});
-		google.charts.setOnLoadCallback(init);
+		<script>
+		  	google.charts.load('current', {'packages':['corechart']});
+			google.charts.setOnLoadCallback(init);
+		</script>
 	</head>
 	
 	<style>
