--- a/field.html
+++ b/field.html
@@ -167,7 +167,7 @@
 		  
 		  function generateCard(){
 		    var str = '';
-		    for(let i = 0; i < imgsrc.length ; i++){
+		    for(let i = 0; i < cardtitle.length ; i++){
 		      s += `<div class="banner">
 		              <p id="title">${cardtitle[i]}</p>
 		            <div class="des">
