--- a/field.html
+++ b/field.html
@@ -19,16 +19,15 @@
 			
 			function init() {
 				var url =
-				'https://docs.google.com/spreadsheets/d/1kjo4jcjZZgD0H8X0iUqaJOR-sNK2ZtK8M8LvAW8baP4/gviz/tq?sheet=工作表1';
+				'https://docs.google.com/spreadsheets/d/1Gnn0PCY6ghFofEiZ_6AlR0O1Yb_G--dRyFD6ILlZhcA/gviz/tq?sheet=Field';
 				var query = new google.visualization.Query(url);
 					query.setQuery('select *');
 					query.send(processSheetsData);
 			}	
 			
-			imgsrc = ['','']
+			
 			cardtitle = ['','']
 			carddes = ['','']
-			link = ['','']
 			
 			function processSheetsData(response) {
 				var data = response.getDataTable();
@@ -36,10 +35,8 @@
 				var rows = data.getNumberOfRows();
 				
 				for (var r=0 ; r<rows ; r++) {
-					imgsrc[r] = data.getFormattedValue(r,0);
-					cardtitle[r] = data.getFormattedValue(r,1);
-					carddes[r] = data.getFormattedValue(r,2);
-					link[r] = data.getFormattedValue(r,3);
+					cardtitle[r] = data.getFormattedValue(r,0);
+					carddes[r] = data.getFormattedValue(r,1);
 				}
 			
 				f();
@@ -47,19 +44,13 @@
 			
 			function f(){
 				var s = '';
-				for(let i = 0; i < imgsrc.length ; i++){
+				for(let i = 0; i < cardtitle.length ; i++){
 					s += `<div class="col s12 m6 l4">
 					<div class="card">
-					<div class="card-image">
-					<img src="${imgsrc[i]}">
-					<span class="card-title">${cardtitle[i]}</span>
-					</div>
-					<div class="card-content">
-					<p>${carddes[i]}.</p>
-					</div>
-					<div class="card-action">
-					<a href="${link[i]}">link</a>
-					</div>
+						<p class="card-title">${cardtitle[i]}</span>
+						<div class="card-content">
+						<p>${carddes[i]}.</p>
+						</div>
 					</div>
 					</div>`;
 				}
