--- a/field.html
+++ b/field.html
@@ -46,9 +46,9 @@
 				var s = '';
 				for(let i = 0; i < cardtitle.length ; i++){
 					s += `<div class="col s12 m6 l4">
-					<div class="card">
-						<p class="card-title">${cardtitle[i]}</span>
-						<div class="card-content">
+					<div class="banner">
+						<p class="title">${cardtitle[i]}</span>
+						<div class="des">
 						<p>${carddes[i]}.</p>
 						</div>
 					</div>
