--- a/field.html
+++ b/field.html
@@ -49,7 +49,7 @@
 					<div class="banner">
 						<p id="title">${cardtitle[i]}</span>
 						<div class="des">
-							<p>${carddes[i]}.</p>
+							<p>${carddes[i]}</p>
 						</div>
 					</div>
 					</div>`;
