--- a/interest.html
+++ b/interest.html
@@ -50,14 +50,14 @@
 					s += `<div class="row">
 						<div class="col s4 m3"></div>
 						<div class="interest-card col s4 m3">
-							<img src="interest_card1.jpg">
+							<img src="${img[i]}">
 							<div class="card__content">
 							<p class="card__title">${cardtitle[i]}S</p>
 							<p class="card__description">${carddes[i]}</p>
 							</div>
 						</div>
 						<div class="interest-card col s4 m3">
-							<img src="interest_card2.jpg">
+							<img src="${img[i+1]}">
 							<div class="card__content">
 							<p class="card__title">${cardtitle[i+1]}</p>
 							<p class="card__description">${carddes[i+1]}p>
