--- a/interest.html
+++ b/interest.html
@@ -52,7 +52,7 @@
 						<div class="interest-card col s4 m3">
 							<img src="${img[i]}">
 							<div class="card__content">
-							<p class="card__title">${cardtitle[i]}S</p>
+							<p class="card__title">${cardtitle[i]}</p>
 							<p class="card__description">${carddes[i]}</p>
 							</div>
 						</div>
@@ -60,7 +60,7 @@
 							<img src="${img[i+1]}">
 							<div class="card__content">
 							<p class="card__title">${cardtitle[i+1]}</p>
-							<p class="card__description">${carddes[i+1]}p>
+							<p class="card__description">${carddes[i+1]}</p>
 							</div>
 						</div>
 					</div>`;
