--- a/index.html
+++ b/index.html
@@ -362,7 +362,12 @@
 		}
 	}
 	</style>
-	
+
+	<div class="center">
+		<p style="font-size: 25px;">就讀地</p>
+		<p style="font-size: 10px;">中興大學</p>
+	</div>
+	<!--image gallery-->
 	<div id="imageGallery" style="display:relative; margin-top: 70px; width: 750px; margin-left: auto; margin-right: auto;">
 		<img style="width: 750px; border-radius: 25px;" src="https://photo.travelking.com.tw/scenery/DE6589F1-FA8D-4C35-BDD1-98CBA3CCE8D4_e.jpg">
 	</div>
