--- a/index.html
+++ b/index.html
@@ -363,9 +363,9 @@
 	}
 	</style>
 
-	<div class="center">
-		<p style="font-size: 25px;">就讀地</p>
-		<p style="font-size: 10px;">中興大學</p>
+	<div class="center" style="margin-top: 20px;">
+		<p style="font-size: 40px;">就讀地</p>
+		<p style="font-size: 20px;">中興大學</p>
 	</div>
 	<!--image gallery-->
 	<div id="imageGallery" style="display:relative; margin-top: 70px; width: 750px; margin-left: auto; margin-right: auto;">
