--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 
 	<div class="center" style="margin-top: 20px;">
 		<p style="font-size: 40px;">就讀地</p>
-		<p style="font-size: 20px;">中興大學</p>
+		<p style="font-size: 20px; margin-top: 10px; margin-bottom: 10px;">中興大學</p>
 	</div>
 	<!--image gallery-->
 	<div id="imageGallery" style="display:relative; margin-top: 70px; width: 750px; margin-left: auto; margin-right: auto;">
