--- a/index.html
+++ b/index.html
@@ -367,6 +367,29 @@
 		<p style="font-size: 40px;">就讀地</p>
 		<p style="font-size: 20px; margin-top: 10px; margin-bottom: 10px;">中興大學</p>
 	</div>
+
+	<div id="map"></div>
+	<script>
+	
+	function initMap() {
+		var LatLng = {lat: 24.1167169, lng: 120.6726581};
+		
+		var map = new google.maps.Map(document.getElementById('map'), {
+		zoom: 4,
+		center: LatLng
+		});
+		
+		var marker = new google.maps.Marker({
+			position: LatLng,
+			map: map,
+			title: '中興大學'
+		});
+	}
+	
+	    </script>
+	    <script async defer src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=initMap"></script>
+
+	
 	<!--image gallery-->
 	<div id="imageGallery" style="display:relative; margin-top: 70px; width: 750px; margin-left: auto; margin-right: auto;">
 		<img style="width: 750px; border-radius: 25px;" src="https://photo.travelking.com.tw/scenery/DE6589F1-FA8D-4C35-BDD1-98CBA3CCE8D4_e.jpg">
